# flask_user_auth

./: .env.dev.example  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
backend/: .env.dev.example  .env.example  Dockerfile  Dockerfile.dev  pyproject.toml  readme.md  wsgi.py
backend/app/: __init__.py  celery_app.py  extensions.py
backend/app/api/auth/: routes.py
backend/app/api/v1/: __init__.py  routes.py
backend/app/config/: __init__.py  base.py  development.py  production.py  testing.py
backend/app/models/: base.py  user.py
backend/app/services/: user_service.py
backend/app/utils/: decorators.py  validators.py
backend/migrations/versions/: bd9c8b73c701_initial_migration.py
backend/scripts/: check_config.py  entrypoint.sh  wait-for-db.sh
backend/tests/: conftest.py  test_auth.py
nginx/: Dockerfile  Dockerfile.dev  nginx.conf  nginx.dev.conf
postgres/: init.sql
