[tool.poetry]
name = "flask_user_auth"
version = "0.1.0"
description = ""
authors = ["Pratik Solanki"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
